fix alignments

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ a {
   text-decoration: none
 }
 .fancyButton {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   display: inline-block;
   margin: 0 auto;
